--- a/java-blog/src/main/resources/templates/dashboard/admin_dash.html
+++ b/java-blog/src/main/resources/templates/dashboard/admin_dash.html
@@ -36,7 +36,8 @@
                                     <li><a class="dropdown-item my-2 fs-5 mt-3" href="#">My Profile</a></li>
                                     <li>
                                         <form th:action="@{/logout}" method="post">
-                                            <button type="submit" class="dropdown-item my-2 fs-5 mt-3"></a> Logout</button>
+                                            <button type="submit" class="dropdown-item my-2 fs-5 mt-3"></a>
+                                                Logout</button>
                                         </form>
                                     </li>
                                 </ul>
@@ -55,38 +56,38 @@
     <main>
 
         <div class="container">
-            <div class="row my-5 align-items-center justify-content-between">
+            <div class="row my-5 align-items-center">
 
                 <!-- CATEGORIE -->
 
                 <!-- col sx -->
-                <div class="col-12 col-md-6 d-flex align-items-center">
-                    <h5 class="me-3 mb-0 filter-cat">Filter Categories:</h5>
-                    <div>
-                        <a class="badge badge-cat" th:classappend="${selectedCategory == null} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin}">All
-                            posts</a>
-                        <a class="badge badge-cat" th:classappend="${selectedCategory == 'Java'} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin?category=Java}">Java</a>
-                        <a class="badge badge-cat" th:classappend="${selectedCategory == 'PHP'} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin?category=PHP}">PHP</a>
-                        <a class="badge badge-cat" th:classappend="${selectedCategory == 'JS'} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin?category=JS}">JS</a>
+                <div class="col-12 col-lg-10">
+                    <div class="d-flex align-items-center justify-content-start">
+                        <h5 class="me-3 mb-0 filter-cat">Filter Categories:</h5>
+                        <a class="badge badge-cat me-1" th:classappend="${selectedCategory == null} ? 'selected' : ''"
+                            th:href="@{/dashboard/admin}">All Posts
+                        </a>
 
-                        <a class="badge badge-cat" th:classappend="${selectedCategory == 'Laravel'} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin?category=Laravel}">Laravel</a>
-
-                        <a class="badge badge-cat" th:classappend="${selectedCategory == 'Vue'} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin?category=Vue}">Vue</a>
+                        <!-- Itera su tutte le categorie ottenute dal database -->
+                        <div th:each="category : ${category}">
+                            <a class="badge badge-cat me-1"
+                                th:classappend="${selectedCategory == category.name} ? 'selected' : ''"
+                                th:href="@{/dashboard/admin?category={category}(category=${category.name})}"
+                                th:text="${category.name}">
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- col dx -->
-                <div class="col-12 col-md-6">
-                    <form class="d-flex justify-content-end align-items-center input-group ">
-                        <input class="form-control-sm input-category" type="text" placeholder="New category name"
-                            aria-label="New category name" />
-                        <button class="btn btn-success btn-sm" type="submit">Save</button>
-                    </form>
+                <div class="col-12 col-lg-2 d-flex align-items-center justify-content-lg-end">
+                    <div class="mt-5 mt-lg-0">
+                        <form class="d-inline-flex input-group" style="flex-wrap: nowrap;" method="POST"
+                            th:action="@{/dashboard/admin}">
+                            <input class="input-cat" type="text" name="newCategory" placeholder="New category name"
+                                aria-label="New category name" />
+                            <button class="btn btn-outline-success" type="submit">Save</button>
+                        </form>
+                    </div>
                 </div>
             </div>
 
@@ -99,7 +100,7 @@
                         No articles available for this category.
                     </div>
                 </div>
-                <div class="col-12 col-md-11">
+                <div class="col-lg-12 col-md-12" th:if="${!noArticles}">
                     <table class="table">
                         <thead>
                             <tr class="fs-5">
