--- a/java-blog/src/main/resources/templates/dashboard/admin_dash.html
+++ b/java-blog/src/main/resources/templates/dashboard/admin_dash.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
@@ -25,7 +27,7 @@
                     <!-- Dropdown per il login -->
                     <div class="dropdown">
                         <th:block sec:authorize="isAuthenticated()">
-                            <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                            <th:block sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_USER')">
                                 <!-- Se l'admin è loggato, mostra il pulsante Logged as Admin -->
                                 <button class="btn btn-logged dropdown-toggle me-3" type="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,9 +46,10 @@
                             </th:block>
                         </th:block>
                     </div>
-                    <a class="btn btn-success btn-sm me-3 fw-bold fs-6 d-flex align-items-center" th:href="@{/home}"
+
+                    <a class="btn btn-nav btn-sm me-3 fw-bold d-flex align-items-center" th:href="@{/home}"
                         role="button">Back to<br>Home</a>
-                    <a class="btn btn-primary btn-sm me-2 fw-bold fs-6 d-flex align-items-center"
+                    <a class="btn btn-nav me-2 fw-bold d-flex align-items-center"
                         th:href="@{/dashboard/create}" role="button">Create<br>New Post</a>
                 </div>
             </div>
@@ -85,7 +88,7 @@
                             th:action="@{/dashboard/admin}">
                             <input class="input-cat" type="text" name="newCategory" placeholder="New category name"
                                 aria-label="New category name" />
-                            <button class="btn btn-outline-success" type="submit">Save</button>
+                            <button class="btn btn-outline-success btn-save" type="submit">Save</button>
                         </form>
                     </div>
                 </div>
@@ -117,43 +120,54 @@
                                 <!-- buttons -->
                                 <td class="text-end">
                                     <div class="d-flex justify-content-end gap-2">
-                                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal"
-                                            th:data-bs-target="'#deleteModal' + ${article.id}"
-                                            data-id="${article.id}">Delete</button>
-                                        <a type="button" class="btn btn-info btn-sm"
-                                            th:href="@{|/article/${article.id}/update|}">Update</a>
-                                        <a type="button" class="btn btn-success btn-sm"
-                                            th:href="@{|/article/${article.id}|}">Show</a>
+                                        <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                                            <button type="button" class="btn btn-outline-danger btn-delete"
+                                                data-bs-toggle="modal"
+                                                th:data-bs-target="'#deleteModal' + ${article.id}"
+                                                data-id="${article.id}">
+                                                <i class="fa solid fa-trash-can icon-scale" fill="currentColor"></i>
+                                            </button>
+                                        </th:block>
+                                        <a class="btn btn-outline-primary btn-update"
+                                            th:href="@{|/article/${article.id}/update|}"><i
+                                                class="fa-solid fa-pencil icon-scale" fill="currentColor"></i>
+                                        </a>
+                                        <a class="btn btn-outline-success btn-show"
+                                            th:href="@{|/article/${article.id}|}">
+                                            <i class="fa-solid fa-magnifying-glass icon-scale" fill="currentColor"></i>
+                                        </a>
                                     </div>
 
                                     <!-- Modal -->
-                                    <div class="modal fade" th:id="'deleteModal' + ${article.id}"
-                                        data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                                        aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">
-                                                        Attenzione
-                                                    </h1>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    Sei sicuro di voler eliminare questo ticket ?
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <form th:action="@{'/article/{id}/delete'(id=${article.id})}"
-                                                        method="post">
-                                                        <button type="button" class="btn btn-secondary"
-                                                            data-bs-dismiss="modal">Annulla</button>
-                                                        <button type="submit" class="btn btn-danger">Conferma ed
-                                                            elimina</button>
-                                                    </form>
+                                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                                        <div class="modal fade" th:id="'deleteModal' + ${article.id}"
+                                            data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                                            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                                                            Attenzione
+                                                        </h1>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Sei sicuro di voler eliminare questo ticket ?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <form th:action="@{'/article/{id}/delete'(id=${article.id})}"
+                                                            method="post">
+                                                            <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal">Annulla</button>
+                                                            <button type="submit" class="btn btn-danger">Conferma ed
+                                                                elimina</button>
+                                                        </form>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </th:block>
                                 </td>
                             </tr>
                         </tbody>
