--- a/java-blog/src/main/resources/templates/home/index.html
+++ b/java-blog/src/main/resources/templates/home/index.html
@@ -6,6 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
   <link rel="stylesheet" th:href="@{/css/style.css}">
 
@@ -25,8 +26,8 @@
           <!-- Dropdown per il login -->
           <div class="dropdown">
             <th:block sec:authorize="isAuthenticated()">
-              <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                <!-- Se l'admin è loggato, mostra il pulsante Logged as Admin -->
+              <th:block sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_USER')">
+                <!-- Se l'utente è loggato, mostra il pulsante Logged in as nomeUtente -->
                 <button class="btn btn-logged dropdown-toggle" type="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   <span class="light-text">Logged in as</span><br> <span class="text-user"
@@ -44,7 +45,6 @@
                     </form>
                   </div>
                 </ul>
-
               </th:block>
             </th:block>
             <th:block sec:authorize="!isAuthenticated()">
@@ -84,58 +84,66 @@
   </header>
 
 
-  <main class="container d-flex flex-column justify-content-center align-items-center">
-    <div class="d-flex justify-content-center align-items-center mb-4 w-100">
-      <h5 class="me-3 mb-0 filter-cat">Filter Categories:</h5>
-      <div>
-        <a class="badge badge-cat" th:classappend="${selectedCategory == null} ? 'selected' : ''" th:href="@{/home}">All
-          posts</a>
-        <a class="badge badge-cat" th:classappend="${selectedCategory == 'Java'} ? 'selected' : ''"
-          th:href="@{/home?category=Java}">Java</a>
-        <a class="badge badge-cat" th:classappend="${selectedCategory == 'PHP'} ? 'selected' : ''"
-          th:href="@{/home?category=PHP}">PHP</a>
-        <a class="badge badge-cat" th:classappend="${selectedCategory == 'JS'} ? 'selected' : ''"
-          th:href="@{/home?category=JS}">JS</a>
+  <main>
+    <div class="container d-flex flex-column justify-content-center align-items-center">
+      <div class="d-flex justify-content-center align-items-center mb-4 w-100">
+        <h5 class="me-3 mb-0 filter-cat">Filter Categories:</h5>
+        <div>
+          <a class="badge badge-cat" th:classappend="${selectedCategory == null} ? 'selected' : ''"
+            th:href="@{/home}">All
+            posts</a>
+          <a class="badge badge-cat" th:classappend="${selectedCategory == 'Java'} ? 'selected' : ''"
+            th:href="@{/home?category=Java}">Java</a>
+          <a class="badge badge-cat" th:classappend="${selectedCategory == 'PHP'} ? 'selected' : ''"
+            th:href="@{/home?category=PHP}">PHP</a>
+          <a class="badge badge-cat" th:classappend="${selectedCategory == 'JS'} ? 'selected' : ''"
+            th:href="@{/home?category=JS}">JS</a>
 
-        <a class="badge badge-cat" th:classappend="${selectedCategory == 'Laravel'} ? 'selected' : ''"
-          th:href="@{/home?category=Laravel}">Laravel</a>
+          <a class="badge badge-cat" th:classappend="${selectedCategory == 'Laravel'} ? 'selected' : ''"
+            th:href="@{/home?category=Laravel}">Laravel</a>
 
-        <a class="badge badge-cat" th:classappend="${selectedCategory == 'Vue'} ? 'selected' : ''"
-          th:href="@{/home?category=Vue}">Vue</a>
+          <a class="badge badge-cat" th:classappend="${selectedCategory == 'Vue'} ? 'selected' : ''"
+            th:href="@{/home?category=Vue}">Vue</a>
+        </div>
       </div>
-    </div>
 
 
-    <!-- CARD -->
-    <div class="content-box-article mt-5">
-      <div th:if="${noArticles}" class="alert text-center text-white mt-3 fs-4">
-        No articles available for this category.
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-sm-12 col-lg-8 my-5" th:each="article : ${list}">
-          <div class="card">
-            <img
-              th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
-              alt="Article Image" class="img-fluid border-bottom">
-            <button class="btn btn-danger btn-img position-absolute m-2">
-              <i class="bi bi-pinterest"></i>Salva</button>
-            <div class="icon-box position-absolute top-0 end-0 m-2">
-              <i class="bi bi-search"></i>
-            </div>
-            <div class="card-body">
-              <h3 class="card-title" th:text="${article.title}"></h3>
-              <p class="card-text text-muted">Published on: <span
-                  th:text="${#temporals.format(article.article_date, 'dd/MM/yyyy')}"></span></p>
-              <span class="badge badge-category bg-primary text-white" th:text="${article.category.name}"></span>
-              <p class="card-text mt-2"
-                th:text="${article.body.length() > 100 ? #strings.substring(article.body, 0, 100) + '...' : article.body}">
-              </p>
+      <!-- CARD -->
+      <div class="content-box-article mt-5">
+        <div th:if="${noArticles}" class="alert text-center text-white mt-3 fs-4">
+          No articles available for this category.
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-12 col-lg-8 my-5" th:each="article : ${list}">
+            <div class="card position-relative">
+              <img
+                th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
+                alt="Article Image" class="img-fluid border-bottom">
+              <button class="btn btn-danger btn-img position-absolute m-2">
+                <i class="bi bi-pinterest">
+                </i>Salva
+              </button>
 
-              <div class="d-flex align-items-end flex-column">
-                <a th:href="@{'/home/article/' + ${article.id}}" class="btn btn-success">Read more</a>
+              <button type="button" data-bs-toggle="modal" th:data-bs-target="'#imageModal' + ${article.id}"
+                data-id="${article.id}" class="btn position-absolute top-0 end-0 m-2">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+              </button>
 
+
+              <div class="card-body">
+                <h3 class="card-title" th:text="${article.title}"></h3>
+                <p class="card-text text-muted">Published on: <span
+                    th:text="${#temporals.format(article.article_date, 'dd/MM/yyyy')}"></span></p>
+                <span class="badge badge-category bg-primary text-white" th:text="${article.category.name}"></span>
+                <p class="card-text mt-2"
+                  th:text="${article.body.length() > 100 ? #strings.substring(article.body, 0, 100) + '...' : article.body}">
+                </p>
+                <div class="d-flex align-items-end flex-column">
+                  <a th:href="@{'/home/article/' + ${article.id}}" class="btn btn-success">Read more</a>
+                </div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -150,6 +158,24 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
+  <!-- Modal -->
+  <div th:each="article : ${list}">
+    <div class="modal fade" th:id="'imageModal' + ${article.id}" aria-labelledby="imageModalLabel" aria-hidden="true"
+      data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" style="width: 1000px;">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content pb-5 border-0">
+          <div class="modal-header border-0">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-center">
+            <img
+              th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
+              class="img-fluid img-modal" alt="Article Image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
