--- a/java-blog/src/main/resources/templates/dashboard/dash_update.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_update.html
@@ -44,7 +44,7 @@
                             </th:block>
                         </th:block>
                     </div>
-                    <a class="btn btn-nav me-2 fw-bold fs-6 d-flex align-items-center"
+                    <a class="btn btn-nav me-2 fw-bold d-flex align-items-center"
                         th:href="@{/dashboard/admin}" role="button">Post<br>Dashboard</a>
                 </div>
             </div>
