--- a/java-blog/src/main/resources/templates/home/profile.html
+++ b/java-blog/src/main/resources/templates/home/profile.html
@@ -8,10 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
-    <title>DASHBOARD ARTICOLI ADMIN/USER</title>
+    <title>PROFILO</title>
 </head>
 
 <body>
@@ -92,11 +91,9 @@
                                             <a class="dropdown-item my-2 fs-5 mt-3"
                                                 th:href="@{/dashboard/admin}">Dashboard</a>
                                         </li>
-                                        <li>
-                                            <form th:action="@{/logout}" method="post">
-                                                <button type="submit"
-                                                    class="dropdown-item my-2 fs-5 mt-3">Logout</button>
-                                            </form>
+                                        <form th:action="@{/logout}" method="post">
+                                            <button type="submit" class="dropdown-item my-2 fs-5 mt-3">Logout</button>
+                                        </form>
                                         </li>
                                     </ul>
                                 </th:block>
@@ -139,132 +136,38 @@
         </nav>
     </header>
 
+
+
+
+
     <main>
-
-        <div class="container">
-            <div class="row my-5 align-items-center">
-
-                <!-- CATEGORIE -->
-
-                <!-- col sx -->
-                <div class="col-12 col-lg-10">
-                    <div class="d-flex align-items-center justify-content-start">
-                        <h5 class="me-3 mb-0 filter-cat">Filter Categories:</h5>
-                        <a class="badge badge-cat me-1" th:classappend="${selectedCategory == null} ? 'selected' : ''"
-                            th:href="@{/dashboard/admin}">All Posts
-                        </a>
-
-                        <!-- Itera su tutte le categorie ottenute dal database -->
-                        <div th:each="category : ${category}">
-                            <a class="badge badge-cat me-1"
-                                th:classappend="${selectedCategory == category.name} ? 'selected' : ''"
-                                th:href="@{/dashboard/admin?category={category}(category=${category.name})}"
-                                th:text="${category.name}">
-                            </a>
+        <div class="container d-flex flex-column justify-content-center align-items-center">
+            <div class="content-box-article">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-8">
+                        <div class="card card-profile mx-auto my-5">
+                            <div class="card-title text-center py-3 fs-3 fw-bold">Il tuo Profilo
+                            </div>
+                            <div class="card-body d-flex align-items-center justify-content-center gap-5">
+                                <div
+                                    class="content-box-img position-relative d-flex align-items-center justify-content-center">
+                                    <img th:src="${user != null and user.photoProfile != null 
+                                        ? (#strings.startsWith(user.photoProfile, 'uploads/') 
+                                             ? '/' + user.photoProfile 
+                                             : '/img/' + user.photoProfile)
+                                        : '/img/defaultPhotoProfile.png'}" alt="Foto profilo utente"
+                                        class="img-profile border-bottom">
+                                    <button type="button" data-bs-toggle="modal"
+                                        th:data-bs-target="'#imageModal' + ${user.id}" data-id="${user.id}"
+                                        class="btn btn-imgProfile position-absolute top-0 end-0 m-2">
+                                        <i class="fa-solid fa-pencil icon-scale"></i>
+                                    </button>
+                                </div>
+                                <div th:text="${#strings.toUpperCase(loggedUser.substring(0,1)) + loggedUser.substring(1)}"
+                                    class="fs-4 fw-bold ps-3"></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!-- col dx -->
-                <div class="col-12 col-lg-2 d-flex align-items-center justify-content-lg-end">
-                    <div class="mt-5 mt-lg-0">
-                        <form class="d-inline-flex input-group" style="flex-wrap: nowrap;" method="POST"
-                            th:action="@{/dashboard/admin}">
-                            <input class="input-cat" type="text" name="newCategory" placeholder="New category name"
-                                aria-label="New category name" />
-                            <button class="btn btn-outline-success btn-save" type="submit">Save</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- BOX LISTA ARTICOLI -->
-
-            <div class="row my-5 justify-content-center">
-                <div th:if="${noArticles}" class="alert text-white text-center mt-3 fs-4">
-                    <div class="content-box-article mt-5 d-flex mx-auto">
-                        No articles available for this category.
-                    </div>
-                </div>
-                <div class="col-lg-12 col-md-12 table-container" th:if="${!noArticles}">
-                    <table class="table custom-table table-hover">
-                        <thead>
-                            <tr class="fs-4">
-                                <th scope="col" class="text-center col-post">Post</th>
-                                <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <th scope="col" class="text-center col-author">Author</th>
-                                </th:block>
-                                <th scope="col" class="text-center col-btn">Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="article : ${list}" class="">
-                                <td class="align-middle text-center fs-5">
-                                    <div class="ps-5" th:text="${article.title}">
-                                    </div>
-                                </td>
-                                <td class="text-center align-middle fs-5">
-                                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                                        <div
-                                            th:text="${#strings.toUpperCase(article.author.username.substring(0,1)) + article.author.username.substring(1)}">
-                                        </div>
-                                    </th:block>
-                                </td>
-                                <!-- buttons -->
-                                <td class="align-middle">
-                                    <div class="d-flex justify-content-center gap-3">
-                                        <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                                            <button type="button" class="btn btn-outline-danger btn-delete"
-                                                data-bs-toggle="modal"
-                                                th:data-bs-target="'#deleteModal' + ${article.id}"
-                                                data-id="${article.id}">
-                                                <i class="fa solid fa-trash-can icon-scale" fill="currentColor"></i>
-                                            </button>
-                                        </th:block>
-                                        <a class="btn btn-outline-primary btn-update"
-                                            th:href="@{|/article/${article.id}/update|}"><i
-                                                class="fa-solid fa-pencil icon-scale" fill="currentColor"></i>
-                                        </a>
-                                        <a class="btn btn-outline-success btn-show"
-                                            th:href="@{|/article/${article.id}|}">
-                                            <i class="fa-solid fa-magnifying-glass icon-scale" fill="currentColor"></i>
-                                        </a>
-                                    </div>
-
-                                    <!-- Modal -->
-                                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                                        <div class="modal fade" th:id="'deleteModal' + ${article.id}"
-                                            data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                                            aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                            <div class="modal-dialog">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">
-                                                            Attenzione
-                                                        </h1>
-                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                            aria-label="Close"></button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        Sei sicuro di voler eliminare questo ticket ?
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <form th:action="@{'/article/{id}/delete'(id=${article.id})}"
-                                                            method="post">
-                                                            <button type="button" class="btn btn-secondary"
-                                                                data-bs-dismiss="modal">Annulla</button>
-                                                            <button type="submit" class="btn btn-danger">Conferma ed
-                                                                elimina</button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </th:block>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
                 </div>
             </div>
         </div>
@@ -278,6 +181,48 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+
+    <!-- Modal -->
+    <div class="modal fade" th:id="'imageModal' + ${user.id}" tabindex="-1"
+        th:aria-labelledby="'imageModalLabel' + ${user.id}" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" th:action="@{/profile/updatePhoto}" enctype="multipart/form-data">
+                    <div class="modal-header">
+                        <h5 class="modal-title" th:id="'imageModalLabel' + ${user.id}">Modifica foto profilo</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- foto attuale -->
+                        <div class="mb-3 text-center">
+                            <label class="form-label">Foto attuale</label>
+                            <div class="current-photo">
+                                <img th:src="${user != null and user.photoProfile != null 
+                                    ? (#strings.startsWith(user.photoProfile, 'uploads/') 
+                                         ? '/' + user.photoProfile 
+                                         : '/img/' + user.photoProfile)
+                                    : '/img/defaultPhotoProfile.png'}" alt="Foto attuale" class="img-thumbnail"
+                                    style="width: 120px; height: 120px;">
+                            </div>
+                        </div>
+                        <!-- scegliere la nuova -->
+                        <div class="mb-3">
+                            <label for="photoProfile" class="form-label">Seleziona nuova foto</label>
+                            <input type="file" class="form-control" id="photoProfile" name="photoProfile"
+                                accept="image/*" required>
+                        </div>
+                        <input type="hidden" name="userId" th:value="${user.id}">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-back" data-bs-dismiss="modal">Annulla</button>
+                        <button type="submit" class="btn btn-outline-custom">Salva</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
