--- a/java-blog/src/main/resources/templates/dashboard/admin_dash.html
+++ b/java-blog/src/main/resources/templates/dashboard/admin_dash.html
@@ -191,9 +191,9 @@
                         <thead>
                             <tr class="fs-4">
                                 <th scope="col" class="text-center col-post">Post</th>
-                                <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <th scope="col" class="text-center col-author">Author</th>
-                                </th:block>
+                                <th scope="col" class="text-center col-author" sec:authorize="hasRole('ROLE_ADMIN')">
+                                    Author</th>
+                                <th scope="col" class="text-center col-status">Status</th>
                                 <th scope="col" class="text-center col-btn">Actions</th>
                             </tr>
                         </thead>
@@ -203,13 +203,12 @@
                                     <div class="ps-5" th:text="${article.title}">
                                     </div>
                                 </td>
-                                <td class="text-center align-middle fs-5">
-                                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                                        <div
-                                            th:text="${#strings.toUpperCase(article.author.username.substring(0,1)) + article.author.username.substring(1)}">
-                                        </div>
-                                    </th:block>
+                                <td class="text-center align-middle fs-5" sec:authorize="hasRole('ROLE_ADMIN')">
+                                    <div
+                                        th:text="${#strings.toUpperCase(article.author.username.substring(0,1)) + article.author.username.substring(1)}">
+                                    </div>
                                 </td>
+                                <td class="text-center align-middle fs-5" th:text="${article.status}"></td>
                                 <!-- buttons -->
                                 <td class="align-middle">
                                     <div class="d-flex justify-content-center gap-3">
@@ -274,6 +273,35 @@
     <footer>
     </footer>
 
+    <!-- Modal per il post creato -->
+    <div class="modal fade" id="postCreatedModal" tabindex="-1" aria-labelledby="postCreatedModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content text-center p-4">
+                <div class="modal-header border-0 d-flex flex-column align-items-center">
+                    <h2 class="modal-title text-center fw-bold w-100" id="postCreatedModalLabel">Post Created</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="d-flex flex-column align-items-center">
+                    <span style="font-size: 15rem;">😊</span> <!-- Faccina grande -->
+                    <p class="mt-3 fs-3 fw-bold">Complimenti!<br>Hai creato il tuo articolo con successo!<br>Attendi
+                        l'approvazione dell'Admin e il tuo articolo potrà essere letto da tutti</p>
+                </div>
+                <div class="modal-footer border-0 d-flex justify-content-center">
+                    <button type="button" class="btn btn-outline-custom rounded fs-4 w-60"
+                        data-bs-dismiss="modal">Ok!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Script per mostrare il modal se il post è stato creato -->
+    <script th:if="${postCreated != null}">
+        document.addEventListener("DOMContentLoaded", function () {
+            var myModal = new bootstrap.Modal(document.getElementById('postCreatedModal'));
+            myModal.show();
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
